fix: file name word wrap

--- a/app/assets/stylesheets/_sn.scss
+++ b/app/assets/stylesheets/_sn.scss
@@ -1005,6 +1005,10 @@
   color: var(--sn-stylekit-neutral-contrast-color);
 }
 
+.break-word {
+  word-break: break-word;
+}
+
 .transition {
   transition-property: color, background-color, border-color,
     text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
